client/src/App.css
/* General Page Elements */
@import url('https://fonts.googleapis.com/css?family=Mansalva+Roboto');

body {
  background-color: cornsilk; 
}
.row {
  padding: 10px; 
}
h1 {
  font-family: 'Mansalva', cursive;
  color:black; 
  font-size: 58px; 
}
h2, h3, h4, h5, p {
  color: #383838; 
  font-family: 'Roboto', sans-serif;
}
a {
  color: white;  
  text-decoration: none;
}
a:hover {
  color: white; 
  text-decoration: none;
}
/* -------------------------------------------------- */

/* General Buttons */
.button{
  background-color:#FC4A1A;
  border: none;
  color: white;
  padding: 15px 25px;
  text-align: center;
  font-size: 16px;
  font-weight: bold; 
  font-family: 'Roboto Condensed', sans-serif;
  text-decoration: none;
  margin: 10px; 
}

.button:hover {
  background-color:#F7C331; 
  color: white;
  text-decoration: none; 
}

.button-2 {
  background-color:#F7C331;
  border: none;
  color: white;
  padding: 15px 25px;
  text-align: center;
  font-size: 16px;
  font-weight: bold; 
  font-family: 'Roboto Condensed', sans-serif;
  text-decoration: none;
  margin: 10px; 
}

.button-2:hover {
  background-color:#FC4A1A; 
  color: white;
  text-decoration: none; 
}

.button-small {
  background-color:#FC4A1A;
  border: none;
  color: white;
  padding: 6px 10px;
  text-align: center;
  font-size: 10px; 
  font-weight: bold; 
  font-family: 'Roboto Condensed', sans-serif;
  text-decoration: none;
  margin-left: 10px; 
}
/* -------------------------------------------------- */

/* Unique Elements */
.navbar {
  background-color: #7dd0b6;  
}

.active /*current page */ {
  color: red; 
}

.navbar-nav > li {
  margin-left: 35px; 
  font-family: 'Roboto Condensed', sans-serif; 
}

.navbarLabel {
  color: black; 
  font-size: 24px; 
  font-family: 'Roboto Condensed', sans-serif;
}

#search-bar{
 background: #F7C331;
 color: white; 
}

#search-bar:focus {
  border: 3px solid white;
}

.jumbotron {
  background-color: #7dd0b6;  
  height: 250;  
  clear: "both"; 
  text-align: "center"; 
  padding-bottom: 2%; 
}

.howItWorks {
  text-align: center; 
  display: inline-block; 
}

#how-works-header {
  text-align: center; 
  padding-top: 20px; 
}

.column-1 {
  padding-top: 50px; 
}

.column-2 {
  background-image: url(./assets/lemons.jpg);
  font-weight: bold; 
  display: block; 
  height: 600px; 
  overflow: scroll; 
}

#pantry-div {
margin-top: 30px;
text-align: center; 
font-family: 'Roboto Condensed', sans-serif; 
font-size: 18px; 
/*font-family: 'Mansalva', cursive;
font-size: 18px; */
}

#fill-pantry {
  font-family: 'Mansalva', cursive; 
  font-size: 30px; 
}

#myFood {
  background-color: #7dd0b6;
  color: white;
  outline: none; 
}

#myFood:focus {
  border: 3px solid white;
}

#generate, #reset-btn  /* add to pantry btn */ {
  float: left; 
}

/* -------------------------------------------------- */


/* Icons  */

i /*Size of each icon */{ 
  font-size: 60px; 
}
.iconText {
  font-family: 'Mansalva', cursive;
  font-size: 20px; 
}
#utensils {
  color: darkgray; 
  text-align: center; 
}
#cart {
  color: darkgray; 
}
#clipboard {
  color: darkgray; 
}
.button-small {
  position: absolute;
  right: 10px;
}
.button, .btn {
  margin: 5px;
  padding: 15px;
}
.vl {
  position: absolute;
  left: 50%;
  border-left: 3px solid black;
  height: 100%;
}
h3 {
  border-bottom: 3px solid black;
}
ul {
  list-style-type: "-   ";
  list-style-position: inside;
  padding: 0;
}
li {
  padding: 10px 0;
  margin-left: 0;
}
.card {
  text-align: center;
  margin-top: 20px;
  background-color: #F7C331;
  border-radius: 20px;
}
.card-img-top {
  border-radius: 20px;
}
.card-title {
  color: black;
  font-size: 45px;
  font-weight: bolder;
}

@media only screen and (max-width: 600px) {
  .jumbotron, .container, .row {
    text-align: center;
  }
  .button, .btn {
    padding: 25px;
    font-size: larger;
  }
}

/* -------------------------------------------------- */

